--- a/website/src/lib/Components/blogpost.pcss
+++ b/website/src/lib/Components/blogpost.pcss
@@ -1,7 +1,9 @@
-h1 {
-  @apply text-4xl text-red-500;
-}
+.markdown {
+  & h1 {
+    @apply text-4xl text-red-500;
+  }
 
-h2 {
-  @apply text-2xl;
+  & h2 {
+    @apply text-2xl;
+  }
 }
