--- a/website/src/lib/Components/blogpost.pcss
+++ b/website/src/lib/Components/blogpost.pcss
@@ -1,9 +1,22 @@
 .markdown {
-  & h1 {
+  h1 {
     @apply text-4xl text-red-500;
   }
 
-  & h2 {
+  h2 {
     @apply text-2xl;
+  }
+
+  .anchor {
+    @apply before:content-['↗'] -ml-[26px] pr-1 hover:underline text-accent text-3xl float-left align-middle leading-none;
+  }
+
+  *:is(h1, h2, h3, h4, h5, h6) {
+    > .anchor {
+      visibility: hidden;
+    }
+    &:hover > .anchor {
+      visibility: visible;
+    }
   }
 }
