--- a/website/src/lib/Components/blogpost.pcss
+++ b/website/src/lib/Components/blogpost.pcss
@@ -8,12 +8,12 @@
   }
 
   *:is(h1, h2, h3, h4, h5, h6) {
-    > a {
+    > a:nth-child(1) {
       @apply before:content-['↗'] -ml-[26px] pr-1 hover:underline text-accent text-3xl float-left align-middle leading-none;
-      visibility: hidden;
+      opacity: 0;
     }
     &:hover > a {
-      visibility: visible;
+      opacity: 1;
     }
   }
 }
