--- a/website/src/lib/Components/blogpost.pcss
+++ b/website/src/lib/Components/blogpost.pcss
@@ -8,8 +8,10 @@
   }
 
   *:is(h1, h2, h3, h4, h5, h6) {
+    @apply flex items-center whitespace-pre-wrap;
+
     > a:nth-child(1) {
-      @apply before:content-['↗'] -ml-[26px] pr-1 hover:underline text-accent text-3xl float-left align-middle leading-none;
+      @apply -ml-7 pr-1 hover:underline text-accent float-left leading-none;
       opacity: 0;
     }
     :is(&:hover > a, & > a:focus) {
