--- a/website/src/lib/Components/blogpost.pcss
+++ b/website/src/lib/Components/blogpost.pcss
@@ -11,7 +11,7 @@
     @apply flex items-center whitespace-pre-wrap;
 
     > a:nth-child(1) {
-      @apply -ml-7 pr-1 hover:underline text-accent float-left leading-none;
+      @apply -ml-7 pr-1 stroke-2 border-info stroke-info fill-none hover:border-l-4 hover:-ml-8 text-accent float-left leading-none;
       opacity: 0;
     }
     :is(&:hover > a, & > a:focus) {
