--- a/website/src/lib/Components/blogpost.pcss
+++ b/website/src/lib/Components/blogpost.pcss
@@ -7,7 +7,12 @@
     @apply text-2xl;
   }
 
-  h1, h2, h3, h4, h5, h6 {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
     @apply flex items-center whitespace-pre-wrap;
 
     > a:nth-child(1) {
