--- a/website/src/lib/Components/blogpost.pcss
+++ b/website/src/lib/Components/blogpost.pcss
@@ -1,7 +1,6 @@
-@import "highlight.js/styles/hybrid.css";
+@import 'highlight.js/styles/hybrid.css';
 
 .markdown {
-
   h1 {
     @apply text-4xl text-red-500;
   }
