--- a/website/src/lib/Components/blogpost.pcss
+++ b/website/src/lib/Components/blogpost.pcss
@@ -2,7 +2,7 @@
 
 .markdown {
   h1 {
-    @apply text-4xl text-red-500;
+    @apply text-4xl text-primary
   }
 
   h2 {
@@ -21,7 +21,7 @@
       @apply -ml-7 pr-1 stroke-2 border-info stroke-info fill-none hover:border-l-4 hover:-ml-8 text-accent float-left leading-none;
       opacity: 0;
     }
-    :is(&:hover > a, & > a:focus) {
+    &:hover > a, & > a:focus {
       opacity: 1;
     }
   }
