make it always be a link

--- a/website/src/lib/Components/blogpost.pcss
+++ b/website/src/lib/Components/blogpost.pcss
@@ -29,7 +29,7 @@
   }
 
   .user {
-    @apply hover:link underline text-secondary hover:text-secondary-focus before:content-['@'];
+    @apply link text-secondary hover:text-secondary-focus before:content-['@'];
   }
   span.user {
     @apply hover:cursor-text;
