make it always be a link

--- a/website/src/lib/Components/blogpost.pcss
+++ b/website/src/lib/Components/blogpost.pcss
@@ -32,6 +32,6 @@
     @apply link text-secondary hover:text-secondary-focus before:content-['@'];
   }
   span.user {
-    @apply hover:cursor-text;
+    @apply cursor-text;
   }
 }
