--- a/website/src/lib/Components/blogpost.pcss
+++ b/website/src/lib/Components/blogpost.pcss
@@ -1,7 +1,7 @@
 @import 'highlight.js/styles/hybrid.css';
 
 .markdown {
-  @apply prose mx-auto;
+  @apply prose xl:prose-lg mx-auto;
 
   h1 {
     @apply text-primary;
