--- a/website/src/lib/Components/blogpost.pcss
+++ b/website/src/lib/Components/blogpost.pcss
@@ -19,12 +19,25 @@
     @apply flex items-center whitespace-pre-wrap;
 
     > a:nth-child(1) {
-      @apply -ml-7 pr-1 stroke-2 border-info stroke-info fill-none hover:border-l-4 hover:-ml-8 text-accent float-left leading-none;
+      @apply stroke-info fill-none stroke-2 leading-none border-info;
       opacity: 0;
     }
     &:hover > a,
     & > a:focus {
       opacity: 1;
+    }
+
+    @media only screen and (min-width: 640px) {
+      > a:nth-child(1) {
+        @apply -ml-7 pr-1 hover:border-l-4 hover:-ml-8;
+      }
+    }
+
+    @media only screen and (max-width: 640px) {
+      @apply flex-row-reverse;
+      > a:nth-child(1) {
+        @apply flex-grow flex justify-end hover:border-r-4 hover:-mr-1;
+      }
     }
   }
 
