Squashed commit of the following:
commit cf405509a8b69ced60f99578c787926b0a0d6d35
Author: zivoy <ziv132@gmail.com>
Date:   Sat Jul 8 19:33:41 2023 -0400

    make it so only chain is clickable

commit 78ce720de9f1a2d9f64d0906fc486e50bb2d5052
Author: zivoy <ziv132@gmail.com>
Date:   Sat Jul 8 19:18:21 2023 -0400

    fix able to select title and auth to view

commit f8c3db2a87d5bc7d65ef13ad3ebef48905b09474
Author: zivoy <ziv132@gmail.com>
Date:   Sat Jul 8 18:36:30 2023 -0400

    small fixes

commit 153c9fc9304104ab31a185ab5ac5e7e11965d529
Author: zivoy <ziv132@gmail.com>
Date:   Sat Jul 8 18:34:04 2023 -0400

    switch to ssr friendly no js disabler

commit a712e6edfb40245b751b0cdd6b5ce0be1a64af75
Author: zivoy <ziv132@gmail.com>
Date:   Sat Jul 8 01:54:38 2023 -0400

    dont put margin on all pages

commit ed2b2211c4d3f5324a795fddb5f3ebaade42b870
Author: zivoy <ziv132@gmail.com>
Date:   Sat Jul 8 01:45:17 2023 -0400

    change position of link on phone

commit c6dba3811a4ccbb1f7a77cf8bdb58af1b8b45a45
Author: zivoy <ziv132@gmail.com>
Date:   Sat Jul 8 01:22:52 2023 -0400

    add more margin on phone

commit 1afd4c9b5a881c8b2a143036f003ab653ac3a197
Author: zivoy <ziv132@gmail.com>
Date:   Sat Jul 8 01:15:13 2023 -0400

    add padding to sides on phones

commit 64f8944f0885e15fe4e419b99edddddd1f548408
Author: zivoy <ziv132@gmail.com>
Date:   Sat Jul 8 00:41:48 2023 -0400

    open dropdown other way

commit e67404c0e22c6e5ed51763d5091d151517866965
Author: zivoy <ziv132@gmail.com>
Date:   Sat Jul 8 17:13:09 2023 -0400

    remove prerender from about page

--- a/website/src/lib/Components/blogpost.pcss
+++ b/website/src/lib/Components/blogpost.pcss
@@ -16,8 +16,6 @@
   h4,
   h5,
   h6 {
-    @apply flex items-center whitespace-pre-wrap;
-
     > a:nth-child(1) {
       @apply stroke-info fill-none stroke-2 leading-none border-info;
       opacity: 0;
@@ -28,15 +26,18 @@
     }
 
     @media only screen and (min-width: 640px) {
+      @apply flex items-center whitespace-pre-wrap;
+
       > a:nth-child(1) {
         @apply -ml-7 pr-1 hover:border-l-4 hover:-ml-8;
       }
     }
 
     @media only screen and (max-width: 640px) {
-      @apply flex-row-reverse;
+      @apply flex flex-row-reverse items-baseline;
+
       > a:nth-child(1) {
-        @apply flex-grow flex justify-end hover:border-r-4 hover:-mr-1;
+        @apply ml-auto hover:border-r-4 hover:-mr-1;
       }
     }
   }
