tried fixing inconsistent vertical alignment

--- a/website/src/lib/Components/blogpost.pcss
+++ b/website/src/lib/Components/blogpost.pcss
@@ -16,6 +16,8 @@
   h4,
   h5,
   h6 {
+    @apply flex;
+
     > a:nth-child(1) {
       @apply stroke-info fill-none stroke-2 leading-none border-info;
       opacity: 0;
@@ -26,7 +28,7 @@
     }
 
     @media only screen and (min-width: 640px) {
-      @apply flex items-center whitespace-pre-wrap;
+      @apply items-center whitespace-pre-wrap;
 
       > a:nth-child(1) {
         @apply -ml-7 pr-1 hover:border-l-4 hover:-ml-8;
@@ -34,7 +36,7 @@
     }
 
     @media only screen and (max-width: 640px) {
-      @apply flex flex-row-reverse items-baseline;
+      @apply items-baseline flex-row-reverse;
 
       > a:nth-child(1) {
         @apply ml-auto hover:border-r-4 hover:-mr-1;
