--- a/website/src/lib/Components/FloatingLabel.pcss
+++ b/website/src/lib/Components/FloatingLabel.pcss
@@ -1,14 +1,20 @@
 fieldset {
+  > input,
+  > select,
+  > textarea {
+    @apply w-full focus:outline-none -mt-2.5 pb-1.5;
+  }
+
   > input {
-    @apply input input-ghost w-full focus:outline-none -mt-2.5 pb-1.5;
+    @apply input input-ghost;
   }
 
   > select {
-    @apply select select-ghost w-full focus:outline-none -mt-2.5 pb-1.5;
+    @apply select select-ghost;
   }
 
   > textarea {
-    @apply textarea textarea-ghost w-full focus:outline-none -mt-2.5 pb-1.5;
+    @apply textarea textarea-ghost;
   }
 
   legend {
