--- a/website/src/lib/Components/blogpost.pcss
+++ b/website/src/lib/Components/blogpost.pcss
@@ -16,10 +16,10 @@
   h4,
   h5,
   h6 {
-    @apply flex;
+    @apply flex items-baseline ;
 
     > a:nth-child(1) {
-      @apply stroke-info fill-none stroke-2 leading-none border-info;
+      @apply stroke-info fill-none stroke-2 leading-none border-info self-center;
       opacity: 0;
     }
     &:hover > a,
@@ -28,7 +28,7 @@
     }
 
     @media only screen and (min-width: 640px) {
-      @apply items-center whitespace-pre-wrap;
+      @apply whitespace-pre-wrap;
 
       > a:nth-child(1) {
         @apply -ml-7 pr-1 hover:border-l-4 hover:-ml-8;
@@ -36,7 +36,7 @@
     }
 
     @media only screen and (max-width: 640px) {
-      @apply items-baseline flex-row-reverse;
+      @apply flex-row-reverse;
 
       > a:nth-child(1) {
         @apply ml-auto hover:border-r-4 hover:-mr-1;
